At first run background image will be visible after loading all necessary datas to prevent jumping panel size.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -279,6 +279,7 @@ main {
 				right: -24px;
 				bottom: 0;
 				background-size: cover;
+				background-position: center;
 				z-index: -1;
 				opacity: 1;
 
